
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct CookieInfo {struct Cookie** cookies; } ;
struct Cookie {struct Cookie* next; int spath; int domain; scalar_t__ tailmatch; scalar_t__ secure; } ;


 int Curl_cookie_freelist (struct Cookie*) ;
 int TRUE ;
 int cookie_sort ;
 size_t cookiehash (char const*) ;
 struct Cookie* dup_cookie (struct Cookie*) ;
 int free (struct Cookie**) ;
 int isip (char const*) ;
 struct Cookie** malloc (int) ;
 scalar_t__ pathmatch (int ,char const*) ;
 int qsort (struct Cookie**,size_t,int,int ) ;
 int remove_expired (struct CookieInfo*) ;
 scalar_t__ strcasecompare (char const*,int ) ;
 scalar_t__ tailmatch (int ,char const*) ;

struct Cookie *Curl_cookie_getlist(struct CookieInfo *c,
                                   const char *host, const char *path,
                                   bool secure)
{
  struct Cookie *newco;
  struct Cookie *co;
  struct Cookie *mainco = ((void*)0);
  size_t matches = 0;
  bool is_ip;
  const size_t myhash = cookiehash(host);

  if(!c || !c->cookies[myhash])
    return ((void*)0);


  remove_expired(c);


  is_ip = isip(host);

  co = c->cookies[myhash];

  while(co) {

    if(co->secure?secure:TRUE) {


      if(!co->domain ||
         (co->tailmatch && !is_ip && tailmatch(co->domain, host)) ||
         ((!co->tailmatch || is_ip) && strcasecompare(host, co->domain)) ) {





        if(!co->spath || pathmatch(co->spath, path) ) {




          newco = dup_cookie(co);
          if(newco) {

            newco->next = mainco;


            mainco = newco;

            matches++;
          }
          else
            goto fail;
        }
      }
    }
    co = co->next;
  }

  if(matches) {



    struct Cookie **array;
    size_t i;


    array = malloc(sizeof(struct Cookie *) * matches);
    if(!array)
      goto fail;

    co = mainco;

    for(i = 0; co; co = co->next)
      array[i++] = co;


    qsort(array, matches, sizeof(struct Cookie *), cookie_sort);



    mainco = array[0];
    for(i = 0; i<matches-1; i++)
      array[i]->next = array[i + 1];
    array[matches-1]->next = ((void*)0);

    free(array);
  }

  return mainco;

fail:

  Curl_cookie_freelist(mainco);
  return ((void*)0);
}
